# Ga3Agent

./: .gitignore  API.md  BUILD.md  CMakeLists.txt  DEPLOYMENT.md  Ga1Agent.bpr  Ga1Agent.res  Ga1Agent.tds  Ga1Agent.vcxproj  Ga1Agent.~bpr  Makefile.win  QUICKSTART.md  README.md  SUMMARY.md  SvcController.cpp  SvcController.dfm  SvcController.h  SvcController.~cpp  SvcController.~dfm  SvcController.~h  cp.bat  logsave.txt  oem_param.csv
config/: tags.ini
include/: gabbiani_device.h  opc_server.h  opc_service.h  opcda_types.h
src/: main.cpp
src/device/: gabbiani_device.cpp
src/server/: opc_server.cpp
src/service/: opc_service.cpp
